<resources>
    <string name="app_name">Uncanny Weather</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="country">Pais (Sigla)</string>
    <string name="default_country">BR</string>
    <string name="no_internet_connection_error_message">Sem conexão com a internet</string>
    <string name="server_error_message">Ocorreu um erro no servidor, por favor tente novamente</string>
    <string name="lang">pt</string>
    <string name="city_not_found">Não foi encontrada a cidade</string>
    <string name="temp_degrees">%.0f °C</string>
    <string name="search_label">Informe uma cidade para obter a previsão do tempo!</string>
    <string name="search">Buscar</string>
    <string name="need_city_and_country">É necessário informar a cidade e o pais para realizar a consulta</string>
</resources>